<resources>
    <string name="app_name">TerenceVacationApp</string>
    <string name="title_activity_vacation_detail_host">VacationDetailHostActivity</string>
    <string name="title_vacation_list">Vacation</string>
    <string name="title_vacation_detail">Vacation Detail</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="remove_vacation">Remove Vacation</string>
    <string name="save">Save</string>
    <string name="new_vacation">New Vacation</string>
    <string name="name_of_accommodation">Hotel or Place?</string>
    <string name="accommodation">Accommodation</string>
    <string name="vacation_start_date">Vacation Start Date (yyyy-mm-dd)</string>
    <string name="vacation_end_date">Vacation End Date (yyyy-mm-dd)</string>
    <string name="name_of_vacation">Vacation Title</string>
    <string name="vacation_name">Vacation Name</string>
    <string name="edit_vacation">Edit Vacation</string>
    <string name="new_vacation_header">New Vacation</string>
    <string name="editing_vacation">Editing Vacation</string>
    <string name="excursion_name">Excursion Name</string>
    <string name="excursion_date">Excursion Date (yyyy-mm-dd)</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="editing_excursion">Editing Excursion</string>
    <string name="new_excursion">New Excursion</string>
    <string name="share_vacation">Share Vacation</string>
</resources>