<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vacations.activities.NewVacation">

    <EditText
        android:id="@+id/vacation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/name_of_vacation"
        android:inputType="text"
        android:text="@string/vacation_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_vacation_header"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/vacation_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/vacation_end_date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacation_start_date"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/vacation_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/vacation_start_date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacation_accommodation"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/vacation_accommodation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name_of_accommodation"
        android:inputType="text"
        android:text="@string/accommodation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacation_name"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/save_vacation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="13dp"
        android:onClick="saveNewVacation"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacation_end_date" />

    <TextView
        android:id="@+id/new_vacation_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/new_vacation"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="137dp" />
</androidx.constraintlayout.widget.ConstraintLayout>