<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".excursions.activities.ExcursionForm">

    <EditText
        android:id="@+id/excursion_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/excursion_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_excursion_header" />

    <EditText
        android:id="@+id/excursion_date"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/excursion_date"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/excursion_name" />
    <Button
        android:id="@+id/save_excursion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/excursion_date" />

    <Button
        android:id="@+id/delete_excursion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="24dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/excursion_date" />

    <TextView
        android:id="@+id/edit_excursion_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/edit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="137dp" />

    <Switch
        android:id="@+id/date_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="227dp"
        android:text="Alert"
        app:layout_constraintStart_toEndOf="@+id/excursion_date"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>